--- a/packages/urg_cpp_library/configure.in
+++ b/packages/urg_cpp_library/configure.in
@@ -26,7 +26,8 @@ AC_PROG_CPP
 AC_PROG_INSTALL
 AC_PROG_LN_S
 AC_PROG_MAKE_SET
-AC_PROG_RANLIB
+LT_INIT
+#AC_PROG_RANLIB
 
 # Checks for libraries.
 #LIBS="$LIBS -lurg_cpp"
