--- a/packages/urg_cpp_library/src/Makefile.am
+++ b/packages/urg_cpp_library/src/Makefile.am
@@ -2,5 +2,5 @@
 
 lib_LTLIBRARIES = liburg_cpp.la
 liburg_cpp_includedir = $(includedir)/urg_cpp
-liburg_cpp_include_HEADERS = Urg_driver.h math_utilities.h detect_os.h ticks.h
+liburg_cpp_include_HEADERS = Urg_driver.h math_utilities.h detect_os.h ticks.h Lidar.h
 liburg_cpp_la_SOURCES = Urg_driver.cpp ticks.cpp
