--- a/packages/urg_cpp_library/configure.in
+++ b/packages/urg_cpp_library/configure.in
@@ -31,8 +31,8 @@ LT_INIT
 
 # Checks for libraries.
 #LIBS="$LIBS -lurg_cpp"
-#AC_CHECK_LIB(rt, clock_gettime, [LIBS="$LIBS -lrt"], AC_MSG_NOTICE([*** rt library not found! ***]))
-#AC_CHECK_LIB(urg_c, urg_open, [HAVE_LIBURG_C="yes"], AC_MSG_ERROR([*** urg_c not found! ***]))
+AC_CHECK_LIB(rt, clock_gettime, [LIBS="$LIBS -lrt"], AC_MSG_NOTICE([*** rt library not found! ***]))
+AC_CHECK_LIB(urg_c, urg_open, [HAVE_LIBURG_C="yes"], AC_MSG_ERROR([*** urg_c not found! ***]))
 # !!! todo added urg_c-config check
 CXXFLAGS="$CXXFLAGS `urg_c-config --cflags`"
 CFLAGS="$CFLAGS `urg_c-config --cflags`"
